Add table service_orders to record all services managements (#1779)